# talossolver

./: CMakeLists.txt  README.md
docs/: .$talos_solve_flowchart.drawio.bkp  talos_solve_flowchart.drawio
examples/: demo.cpp
include/: board.hpp  sigil.hpp  talos_solver.hpp  types.hpp
include/talossolver/: board.hpp  sigil.hpp  talos_solver.hpp
src/: board.cpp  sigil.cpp  talos_solve.cpp
tests/: test_board.cpp  test_sigil.cpp
